37/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - random.app.local
    - spacex.app.local
    secretName: tls-secret
  rules:
  - host: random.app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: random-number-client-svc
            port:
              number: 8055
  - host: spacex.app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spacex-app
            port:
              number: 8056


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  tls:
    - hosts:
      - shoombool
      secretName: tls-secret
  rules:
    - host: shoombool
      http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: login-svc
                port:
                  number: 8080
          - path: /logout
            pathType: Prefix
            backend:
              service:
                name: logout-svc
                port:
                  number: 8086
